<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="car" type="com.ccortez.desafioconcreteapplication.service.model.Repositories"/>
        <variable name="item" type="com.ccortez.desafioconcreteapplication.service.model.Items"/>
        <variable name="callback" type="com.ccortez.desafioconcreteapplication.view.callback.RepositoryClickCallback"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="150dp">

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0.0"
            tools:layout_editor_absoluteY="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/car_name"
            android:textStyle="bold"
            android:textSize="@dimen/car_text"
            android:text="@{item.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/car_description"
            android:textStyle="bold"
            android:textSize="@dimen/car_text"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@{item.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/name"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_mais_detalhes"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:background="@drawable/layout_button_bg"
            android:onClick="@{() ->  callback.onClick(item)}"
            android:padding="13dp"
            tools:ignore="NotSibling">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/details"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@{String.valueOf(car.total_count)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/btn_mais_detalhes"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>